vx.xx xx-xxx-xx
Fixed finding of mountd and nfsd port numbers from portmapper when NFS2 not
supported.
Fixed encoding that sometimes added garbage to the end of filenames.

v1.10 28-Mar-07
Fixed timestamp setting for OS_File 0 if the file already existed.
Fixed inaccuracy in calculation of nanosecond part of the timestamp.
The timestamp is now set when an open file is closed.
Now refetches the root filehandle if it is stale.
When reconnecting after a timeout, use a different socket to avoid delays.

v1.09 16-Oct-06
Fixed bug that caused the wrong attributes to be returned for a symlink that
couldn't be followed.
File sizes are limited to 2GB rather than 4GB as accessing > 2GB doesn't work.
Added UnixEx option to set filetype based on executable permissions.
Added filename encoding option.
Improved NFS3 writes for servers that support unstable storage.
Added support for accessing files from callbacks.

v1.08 26-Oct-05
Fixed bug where sometimes filetypes would get changed when a file was renamed.

v1.07 14-Jun-05
Fixed problem with renamed directories getting ,ffd appended.

v1.06 29-May-05
Added support for NFS v3.
Directories now always get a filetype of ffd.
Fixed bug that truncated filenames with escape sequences when renaming them.
Fixed problem that could give a permissions error when creating a file.

v1.05 9-Apr-05
Fixed bug in renaming files that was caused by the changes in 1.04.

v1.04 2-Apr-05
Fixed bug when a mount was mounted before the iconbar menu was displayed.
Hard spaces in filenames on the server are now escaped correctly.
Deleting a symbolic link now deletes the link and not the target of the link.
Symbolic links that point to non-existant files can now be deleted.
Fixed bug that prevented renaming a file when the new name differed only in case.

v1.03 6-Jan-05
Add support for dragging files to a mount's iconbar icon.
Silently reconnect if a server closes a TCP connection due to inactivity.
Improve error message on portmapper failure.