@@ -161,6 +161,8 @@ static os_error *parse_line(char *line, struct conn_info *conn)
 		conn->casesensitive = (int)strtol(val, NULL, 10);
 	} else if (CHECK("UnixEx")) {
 		conn->unixexfiletype = (int)strtol(val, NULL, 10);
+	} else if (CHECK("TranslateWin")) {
+		conn->escapewin = (int)strtol(val, NULL, 10);
 	}
 	/* Ignore unrecognised lines */
 	return NULL;
@@ -304,6 +306,7 @@ os_error *func_newimage(unsigned int fileswitchhandle, char *config, struct conn
 	conn->followsymlinks = 5;
 	conn->pipelining = 0;
 	conn->unixexfiletype = 0;
+	conn->escapewin = 0;
 	conn->casesensitive = 0;
 	conn->laststart = 0;
 	conn->nfs3 = 0;
